<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Loginfrag"
    android:background="@drawable/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:id="@+id/tv_title"
            android:textColor="@color/dark"
            android:layout_margin="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="35dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Username"
            android:hint="Enter Username"
            android:layout_below="@+id/tv_title"
            android:layout_margin="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_lpassword"
            android:inputType="textPassword"
            android:hint="Enter password"
            android:layout_below="@+id/et_Username"
            android:layout_margin="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:id="@+id/btn_lsignin"
            android:layout_weight="2"
            android:layout_margin="20sp"
            android:layout_below="@+id/et_lpassword"
            android:background="@drawable/button"
            />



    </RelativeLayout>


</LinearLayout>